# KnowledgeVault

./: BACKEND_SOURCES_EXAMPLE.md  README.md  current.yaml  docker-compose.yml  env.example  gitignore
backend/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  instruc.md  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  environment.py  exceptions.py  observability.py  security.py
backend/app/modules/AI/: prueba.ipynb  router.py  schemas.py
backend/app/modules/AI/documents/uploaded/: Annual_Report.docx  Manual_Politicas_Corporativas.docx  Memoria_Anual.docx
backend/app/modules/AI/pipeline/: pipeline.py
backend/app/modules/AI/pipeline/chunking/: chunking.py  pre_process.py  utils.py
backend/app/modules/AI/pipeline/embeddings/: embeddings.py  models.py
backend/app/modules/AI/pipeline/generator/: generator.py  utils.py
backend/app/modules/analytics/: __init__.py  models.py  repository.py  router.py  services.py  types.py
backend/app/modules/auth/: __init__.py  exceptions.py  router.py  schemas.py  service.py
backend/app/modules/chat/: __init__.py  exceptions.py  pricing.py  router.py  services.py
backend/app/modules/chat/retrieval/: __init__.py  generator.py  retriever.py
backend/app/modules/documents/: __init__.py  exceptions.py  models.py  repository.py  router.py  s3_utils.py  schemas.py  services.py  storage_utils.py
backend/app/modules/documents/indexing_pipeline/: pipeline.py
backend/app/modules/health/: __init__.py  router.py
backend/app/modules/users/: models.py  repository.py  schemas.py
(+90 files in other folders)
